k8s/apps/gitea/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitea-system
  labels:
    app.kubernetes.io/name: gitea
    app.kubernetes.io/instance: gitea
