k8s/apps/gitea/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: gitea-system
  labels:
    app.kubernetes.io/name: gitea
    app.kubernetes.io/instance: gitea
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: http
      nodePort: 30300
      protocol: TCP
      name: http
    - port: 22
      targetPort: ssh
      nodePort: 30022
      protocol: TCP
      name: ssh
  selector:
    app.kubernetes.io/name: gitea
    app.kubernetes.io/instance: gitea
