k8s/apps/gitea/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-ingress
  namespace: gitea-system
  labels:
    app.kubernetes.io/name: gitea
    app.kubernetes.io/instance: gitea
  annotations:
    # kubernetes.io/ingress.class: nginx # Uncomment and adjust if using specific Ingress Controller is required
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - host: gitea.homelab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea
                port:
                  name: http
  tls:
    - hosts:
        - gitea.homelab.local
      secretName: gitea-tls
